# dl_tools

./: .gitignore  README.md  constants.py  pyproject.toml  requirements.txt  test.py  testcode.py  train.py
config/: pascalvoc_vanilla.yaml  scannet_vanilla.yaml  shapenet_aleatoric.yaml  shapenet_vanilla.yaml  voc12.yaml  voc12_MCD_inference.yaml
datasets/: __init__.py  shapenet.py
models/: __init__.py  aleatoric_network.py  base_network.py  deterministic_network.py  erfnet.py  loss.py  network.py  network_wrapper.py  unet.py
models/erfnet/: aleatoric_erfnet.py  erfnet.py
models/unet/: aleatoric_unet.py  unet.py
semantic_segmentation/: constants.py  model_weight_extractor.py  test.py  train.py  variance_check.py
semantic_segmentation/datasets/: __init__.py  scannet.py  shapenet.py  voc12.py  voc_pascal.py
semantic_segmentation/models/: MCD_network.py  __init__.py  aleatoric_network.py  base_network.py  deterministic_network.py  evidential_network.py  loss.py  mcd_network.py
semantic_segmentation/models/deeplabv3/: __init__.py  _utils.py  deeplab_classifier.py  deeplabv3.py  deeplabv3_mcd.py  deeplabv3_resnet.py  resnet_backbone.py
semantic_segmentation/models/erfnet/: aleatoric_erfnet.py  erfnet.py
semantic_segmentation/models/unet/: aleatoric_unet.py  unet.py
semantic_segmentation/utils/: image.py  image_test.py  metrics.py  transformations.py  utils.py
semantic_segmentation/wandb/: latest-run
semantic_segmentation/wandb/run-20240502_120647-lwe4ihqq/: run-lwe4ihqq.wandb
utils/: metrics.py  transformations.py  utils.py
wandb/: latest-run
(+156 files in other folders)
